PDFBOX-3584: add build option variable to be used for jdk9
git-svn-id: https://svn.apache.org/repos/asf/pdfbox/trunk@1804453 13f79535-47bb-0310-9956-ffa450edef68